[package]
name = "ftools"
version = "0.1.1"
authors = ["Marius Ciubotariu <marius.ciubotariu@gmail.com>"]
edition = "2018"
description = "Functional utilities for Rust"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/y2kappa/functools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
tokio = {version="1.4.*", features=["full"]}
futures = "0.3.*"